--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
 .app-wrapper {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
-  height: 700px;
-  border: 2px solid blue;
+  padding: 0 5px;
+  width: 1000px;
+  height: 720px;
+  border: 2px solid black;
+  background-color: #515151;
+  border-radius: 10px;
   display: grid;
-  grid-template-rows: 2fr 10fr 1fr;
-  grid-template-columns: 1fr 10fr;
+  grid-template-rows: 2fr 10fr 3fr;
+  grid-template-columns: 1.5fr 10fr;
   grid-gap: 10px;
   grid-template-areas:
-  "a h h"
+  "i h h"
   "n b b"
-  "x f f"
+  "x b b"
 ;
 
 }
 .app {
-  border: 2px solid black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2b2b2b;
 }
 
 
@@ -24,14 +32,30 @@
 .b {
   grid-area: b;
   border: 2px solid black;
+  border-radius: 10px;
+  background-color: white;
+  padding: 20px;
 }
 
 .n {
   grid-area: n;
   border: 2px solid black;
+  border-radius: 10px;
+  background-color: white;
 }
 
 .f {
   grid-area: f;
   border: 2px solid black;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.i {
+  width: 100px;
+  grid-area: i;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  border-radius: 30px;
 }
