--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,40 @@
 .app-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 5px;
-  width: 1400px;
-  height: 900px;
-  border: 2px solid black;
-  background-color: #515151;
-  border-radius: 10px;
-  display: grid;
-  grid-template-rows: 2fr 10fr 3fr;
-  grid-template-columns: 1.5fr 10fr;
-  grid-gap: 10px;
-  grid-template-areas:
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 5px;
+    width: 1400px;
+    height: 900px;
+    border: 2px solid black;
+    background-color: #515151;
+    border-radius: 10px;
+    display: grid;
+    grid-template-rows: 2fr 10fr 3fr;
+    grid-template-columns: 1.5fr 10fr;
+    grid-gap: 10px;
+    grid-template-areas:
   "i h h"
   "n b b"
-  "x b b"
-;
+  "x b b";
 
 }
+
 .app {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #2b2b2b;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #2b2b2b;
 }
 
 
 
-.b {
-  grid-area: b;
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: white;
-  padding: 20px;
-}
-
-.n {
-  grid-area: n;
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: white;
-}
-
-.f {
-  grid-area: f;
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: white;
-}
 
 .i {
-  width: 100px;
-  grid-area: i;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  border-radius: 30px;
+    width: 100px;
+    grid-area: i;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    border-radius: 30px;
 }
