--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -1,3 +1,10 @@
+.n {
+    grid-area: n;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
 .NavLink {
     text-decoration: none;
 }
